@@ -1,7 +1,6 @@
 -server
--Xmx16G
--XX:-UseBiasedLocking
--XX:+UseG1GC
+-XX:InitialRAMPercentage=80
+-XX:MaxRAMPercentage=80
 -XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+ExitOnOutOfMemoryError
@@ -12,3 +11,6 @@
 -XX:PerBytecodeRecompilationCutoff=10000
 -Djdk.attach.allowAttachSelf=true
 -Djdk.nio.maxCachedBufferSize=2000000
+# Improve AES performance for S3, etc. on ARM64 (JDK-8271567)
+-XX:+UnlockDiagnosticVMOptions
+-XX:+UseAESCTRIntrinsics
